Update climate change index.html

--- a/climate change index.html
+++ b/climate change index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Climate Change</title>
+    <link rel="stylesheet" href="/Users/longhchung/Documents/GitHub/Awesomelok622.github.io/stylesheet for climate change.css">
+    <!-- CSS only -->
+    
+</head>
+<body>
+    <h1>Climate Change</h1>
+    <hr class="my-5">
+    <h2>Introduction</h2>
+    <p1>
+    Hello everyone! Thank you for
+    visiting this website. Climate change is 
+    a serious and urgent issue that needs more attention
+    around the globe. In this website, you will find information
+    about how climate change is affecting different aspects of
+    our life.
+    </p1>
+    <h3>Content</h3>
+
+    <h4>Impacts of Climate Change
+        <link src=>
+        <a href="/Users/longhchung/Documents/GitHub/Awesomelok622.github.io/body2.html">Impacts of Climate Change</a>
+    </h4>
+    <ul>
+        <li><a href="https://time.com/5888866/climate-change-wildfires-political-instability/" target="_blank">Visit more about political aspect</a></li>
+        <li><a href="https://link.springer.com/chapter/10.1057/9781137269928_4" taregt="_blank">Visit more about sociostructural aspect</a></li>
+        <li><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3104554" target="_blank">Visit more about economical aspects</a></li>
+    </ul>
+
+    <h4>List of Cat 5 hurricanes in the US from 1990 to 2021</h4>
+        <img src="/Users/longhchung/Documents/GitHub/Awesomelok622.github.io/3KL4UULLCZDCFA4VXNEPEQDU2Y.jpeg" alt="Image">
+        <br>
+
+  
+        <ul>
+            <li>1992: Hurricane Andrew</li>
+            <li>2005: Hurricane Katrina</li>
+            <li>2018: Hurricane Michael</li>
+          </ul>
+            link can be found in <a href="https://www.history.com/news/category-5-storms-hurricanes-united-states/"
+                target="_blank"> www.history.com</a>
+
+    <h3>Climate change & Hurricanes</h3>
+    <p>By far, major hurricanes are the world's most costly natural weather disaster. In some cases, it has caused over $100 billion in damage. Now, there is evidence that the human-caused global warming are leading to stronger and more destructive hurricanes. If the climate continues to warm, the latest research shows that the trend of more deadly hurricanes is likely to continue.</p>
+    <br>
+    <p>According to NOAA, 85% of all damages from hurricanes come from category 3, 4, and 5 storms. That’s the case in part because of their intense winds. Incredibly, a hurricane with 150-mph wind speed has 256 times the damage potential of a hurricane with 75-mph winds.</p>
+    <br>
+    <p>In a 2015 paper using future model simulations, Knutson found an “increase in average cyclone intensity, precipitation rates, and the number and occurrence days of very intense category 4 and 5 storms.” Specifically, the simulations calculated a 28% increase in category 4 and 5 storms globally, with a 335% increase in the northeast Pacific and a 42% increase in the North Atlantic.</p>
+    <br>
+    <p>In Bhatia’s 2018 study, the intensity gains are even more alarming. The HiFLOR simulations project the number of major cyclones (category 3, 4, and 5) to increase by 20% globally and 29% in the Atlantic by 2081-2100. But HiFLOR suggests a significant increase in major systems even sooner.</p>
+    <br>
+    <p>The numbers really spike when isolating just category 5 storms, with an 85% global jump and 136% Atlantic basin leap. Of these findings, Bhatia says, “HiFLOR climate change experiments signal that tropical cyclones will more routinely reach wind speeds that are well above the category 5 threshold, hinting that the Saffir–Simpson scale might need to be extended to include higher categories in the early 21st century.”</p>
+    <br>
+</body>
+</html>
 
