--- a/climate change index.html
+++ b/climate change index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Climate Change</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/Users/longhchung/Documents/GitHub/Awesomelok622.github.io/stylesheet for climate change.css">
     <!-- CSS only -->
     
