--- a/climate change index.html
+++ b/climate change index.html
@@ -10,7 +10,7 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: teal;">
         <span class="navbar-brand" href="#">
             <img src="/Users/longhchung/Documents/GitHub/hellow2/shutterstock_climate-change-buildings.jpeg" width="30" height="30" alt="">
             Never Settle For Climate Change</span>
