--- a/climate change index.html
+++ b/climate change index.html
@@ -10,7 +10,8 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: teal;">
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(16, 155, 132);">
+
         <span class="navbar-brand" href="#">
             <img src="/Users/longhchung/Documents/GitHub/hellow2/shutterstock_climate-change-buildings.jpeg" width="30" height="30" alt="">
             Never Settle For Climate Change</span>
@@ -73,9 +74,8 @@
     <h3>Content</h3>
 
     <h4>Impacts of Climate Change
-        <link src=>
-        <a href="/Users/longhchung/Documents/GitHub/Awesomelok622.github.io/body2.html">Impacts of Climate Change</a>
-    </h4>
+        please include a link here to the paragraph
+      </h4>
     <ul>
         <li><a href="https://time.com/5888866/climate-change-wildfires-political-instability/" target="_blank">Visit more about political aspect</a></li>
         <li><a href="https://link.springer.com/chapter/10.1057/9781137269928_4" taregt="_blank">Visit more about sociostructural aspect</a></li>
