Update climate change index.html

--- a/climate change index.html
+++ b/climate change index.html
@@ -25,18 +25,18 @@
               <a class="nav-link" href="#Introduction">Introduction <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Useful-inks">Useful Links</a>
+              <a class="nav-link" href="#Useful-links">Useful Links</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#Action">Action</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">action 2</a>
+                <a class="dropdown-item" href="#Action2">action 2</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#Sthelse">Something else here</a>
               </div>
             </li>
             <li class="nav-item">
@@ -79,9 +79,19 @@
     about how climate change is affecting different aspects of
     our life.
     </p1>
+
+
+
+
+    <br>
+    <br>
     <h3 id="Content">Content</h3>
     
-    <h4>Impacts of Climate Change
+
+    <br>
+    <br>
+
+    <h4 id="Impacts-of-climatechange">Impacts of Climate Change
         please include a link here to the paragraph
       </h4>
     <ul>
@@ -100,20 +110,21 @@
             <li>2005: Hurricane Katrina</li>
             <li>2018: Hurricane Michael</li>
           </ul>
-            link can be found in <a href="https://www.history.com/news/category-5-storms-hurricanes-united-states/"
+            link can be found in <a href="link1"><a href="https://www.history.com/news/category-5-storms-hurricanes-united-states/"
                 target="_blank"> www.history.com</a>
 
-    <h3>Climate change & Hurricanes</h3>
-    <p>By far, major hurricanes are the world's most costly natural weather disaster. In some cases, it has caused over $100 billion in damage. Now, there is evidence that the human-caused global warming are leading to stronger and more destructive hurricanes. If the climate continues to warm, the latest research shows that the trend of more deadly hurricanes is likely to continue.</p>
-    <br>
-    <p>According to NOAA, 85% of all damages from hurricanes come from category 3, 4, and 5 storms. That’s the case in part because of their intense winds. Incredibly, a hurricane with 150-mph wind speed has 256 times the damage potential of a hurricane with 75-mph winds.</p>
-    <br>
-    <p>In a 2015 paper using future model simulations, Knutson found an “increase in average cyclone intensity, precipitation rates, and the number and occurrence days of very intense category 4 and 5 storms.” Specifically, the simulations calculated a 28% increase in category 4 and 5 storms globally, with a 335% increase in the northeast Pacific and a 42% increase in the North Atlantic.</p>
-    <br>
-    <p>In Bhatia’s 2018 study, the intensity gains are even more alarming. The HiFLOR simulations project the number of major cyclones (category 3, 4, and 5) to increase by 20% globally and 29% in the Atlantic by 2081-2100. But HiFLOR suggests a significant increase in major systems even sooner.</p>
-    <br>
-    <p>The numbers really spike when isolating just category 5 storms, with an 85% global jump and 136% Atlantic basin leap. Of these findings, Bhatia says, “HiFLOR climate change experiments signal that tropical cyclones will more routinely reach wind speeds that are well above the category 5 threshold, hinting that the Saffir–Simpson scale might need to be extended to include higher categories in the early 21st century.”</p>
-    <br>
+    <h4>
+      <br>
+      <br>
+      <br>
+
+
+      Useful links
+      <br>
+      <a id="Useful-links"><a href="https://www.history.com/news/category-5-storms-hurricanes-united-states/"
+        target="_blank"> www.history.com</a>
+      <br>
+    </h4>
 </body>
 </html>
 
