--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </ul>
 
     <h4>List of Cat 5 hurricanes in the US from 1990 to 2021</h4>
-        <img src="/Users/longhchung/Documents/GitHub/Awesomelok622.github.io/3KL4UULLCZDCFA4VXNEPEQDU2Y.jpeg" alt="Image">
+        <img src="hurricaneeg1.jpeg" alt="A category 5 Hurricane">
         <br>
 
   
