--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         <li>naturally accured greenhouse gas from soil. 
         </li> 
     <br>
+    <img src="Pollution-and-smoke.jpg" alt="Greenhouse gases emitted through incinerators and factories">
+        <br>
+      Pollution-and-smoke.jpg
     <br>
     <br>
     
