--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
   <p1>
     There are several factors that affect Climate change <ul>
       </ul>
-        <li>Human activities:burning coal oil to generate electricity</li> 
+        <li>Human activities:</li>
+            <li>burning coal oil to generate electricity</li> 
         
-        <li>naturally accured greenhouse gas from soil. 
-        </li> 
+        <li>naturally accured causes:</li>
+            <li>leakage of greenhouse gas from the Permafrost.</li> 
+        
     <br>
     <img src="Pollution-and-smoke.jpg" alt="Greenhouse gases emitted through incinerators and factories">
         <br>
