--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       </ul>
         <li>Human activities:</li>
             <li>burning coal oil to generate electricity</li> 
-            <li>Huamn Deforestation
+            <li>Huamn Deforestation</li>
+            <li>Overconsumption of meat</li>
         
         <li>naturally accured causes:</li>
             <li>leakage of greenhouse gas from the Permafrost(frozen soil).</li> 
