--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <li>leakage of greenhouse gas from the Permafrost(frozen soil).</li> 
         
     <br>
-    <img src="pollution-and-smoke.jpg" alt="Greenhouse gases emitted through incinerators and factories">
+    <img src="pollutionandsmoke.jpg" alt="Greenhouse gases emitted through incinerators and factories">
         <br>
     <p1> 
     <br>
