--- a/index.html
+++ b/index.html
@@ -75,15 +75,17 @@
 <body >
    
    
-  <h2 id ="introduction">Introduction</h2>
+    <h2 id ="introduction">Introduction</h2>
 
-  <p1>
-    Climate change is 
-    a controversial issue that might lead to negative effects to our daily routine. CLick one of the toggles above find out more about the causes, impacts and figures of climate change.
-    <br>
-    <br>
-    <br>
-  </p1>
+    <p1>
+      Climate change is 
+      a controversial issue that might lead to negative effects to our daily routine. CLick one of the toggles above find out more about the causes, impacts and figures of climate change.
+      <br>
+      <br>
+      <br>
+      <img src="climateicecream.jpg" alt="climateicecream">
+        <br>
+    </p1>
 
 
 
@@ -120,7 +122,7 @@
   <h3 id ="impacts">Impacts of climate Chnage</h2>
     
   <p1>
-    Typical impacts might lead to rise in co2 level, which might lead to global warming.
+    Typical impacts might lead to rise in CO2 level, which might lead to global warming.
     As a result, rising temperature give rise to extreme weathers. One of which is the formation of Hurricanes or Typhoons.  
   </p1> 
 
@@ -131,7 +133,7 @@
     Researches have shown that the wind intensity, rainfall and frequency of occurence have positive corelation with increasing temperature caused by global warming. Below are a list of dataset of hurricanes from year 19xx to 20xx.
   </p1>
 
-
+    
 
     <br>
     <br>
