--- a/index.html
+++ b/index.html
@@ -87,7 +87,28 @@
         <br>
     </p1>
 
-
+    <!--carousel-->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="pollutionandsmoke.jpg" alt="pollution and smoke" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="..." alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="..." alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
 
   
@@ -111,8 +132,7 @@
           <li>Leakage of greenhouse gas from the Permafrost(frozen soil).</li> 
         </ul>  
       <br>
-      <img src="pollutionandsmoke.jpg" alt="Greenhouse gases emitted through incinerators and factories">
-          <br>
+         <br>
           <br>
           <br>
     </p1> 
