--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         <div class="carousel-item">
           <img class="d-block w-100" src="forestlungs.jpg" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Human activities: Huamn Deforestation
+            <h3>Human activities: Human Deforestation
             </h3>
-            <p>cutting down of trees can </p>
+            <p>cutting down of trees can relase up to 1/5 of CO2 gas to the atmosphere, contributing to global warming </p>
         </div>
         </div>
          
