--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h3>Human activities:
               Burning coal oil to generate electricity 
             </h3>
-            <p>Greenhouse gas such as CO2 and methane are produced to the atmosphere</p>
+            <p>Greenhouse gas such as CO2 and methane are produced from Fuel Combustion to the atmosphere</p>
           </div>
         </div>
         <div class="carousel-item">
