--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!--carousel (causes of climate change)-->
     
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="background-color: darkgrey;">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <p1>
           <h3  class="display-4" style="text-align: left;" id="causes" >Causes of climate Change
@@ -172,7 +172,7 @@
    <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h3 class="display-4" id ="impacts">Evidence of climate Change: Tropical cyclones</h3>
-      <p1 class="lead"> Typical impacts might lead to rise in CO2 level, which might lead to global warming.
+      <p1 class="lead"> Human activities and natural carbon emisstions give rise to greenhouse gases such as CO2, Chlorofluorocarbons, and Methane, concentrated in the atmosphere, which might lead to global warming.
         As a result, rising temperature give rise to extreme weathers. One of which is the formation of Hurricanes or Typhoons.  
      </p1>
     </div>
@@ -205,11 +205,11 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="hurrfrequency.jpg" alt="Third slide">
         <div class="carousel-caption ">
-          <h3>Precipitation of hurricanes
+          <h3>frequency of hurricanes
           </h3>
           <p>Study from The Nature has also shown that
-            <a href=" https://www.nature.com/articles/s41586-020-2867-7
-            " target="_blank">the amount of precipitation </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
+            <a href=" https://www.pnas.org/content/117/22/11975" 
+            target="_blank">the frequency of hurricanes </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
           </p>
 
         </div>
@@ -233,7 +233,9 @@
 
     <p1>
 
-      Researches have shown that the <a href="https://journals.ametsoc.org/view/journals/bams/100/10/bams-d-18-0189.1.xml">wind intensity</a> , <a href="">rainfall</a>, and <a href="https://www.pnas.org/content/117/22/11975" target="_blank">frequency of occurence </a> of Tropical cyclones have positive corelation with increasing temperature caused 
+      Researches have shown that the <a href="https://journals.ametsoc.org/view/journals/bams/100/10/bams-d-18-0189.1.xml">wind intensity</a> , 
+      <a href="">rainfall</a>,
+       and <a href="https://www.pnas.org/content/117/22/11975" target="_blank">frequency of occurence </a> of Tropical cyclones have positive corelation with increasing temperature caused 
       by global warming.  </p1> 
 
     
