--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         
         <div class="carousel-item">
           <img class="d-block w-100" src="permafrost.jpg" alt="fourth slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption ">
             <h3>Naturally accured causes:
               
                 <li>Leakage of greenhouse gas from the Permafrost(frozen soil).</li> 
@@ -187,7 +187,7 @@
           </h3>
           <p>Study from The Nature has also shown that
             <a href=" https://www.nature.com/articles/s41586-020-2867-7
-            " target="_blank">the endurhance of hurricane </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.</p>
+            " target="_blank" style="color:cornsilk">the endurhance of hurricane </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.</p>
 
         </div>
       </div>
@@ -196,9 +196,8 @@
         <div class="carousel-caption ">
           <h3>Precipitation of hurricanes
         </h3>
-        <p>Study from The Nature has also shown that
-          <a href=" https://www.nature.com/articles/s41586-020-2867-7
-          " target="_blank">the amount of precipitation </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
+        <p>Study from The GDFL(Global Warming and Hurricanes) has also shown that
+          <a href=" https://www.gfdl.noaa.gov/global-warming-and-hurricanes/" target="_blank" style="color:cornsilk">the amount of precipitation </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
         </p>
         </div>
       </div>
@@ -209,7 +208,7 @@
           </h3>
           <p>Study from The Nature has also shown that
             <a href=" https://www.pnas.org/content/117/22/11975" 
-            target="_blank">the frequency of hurricanes </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
+            target="_blank" style="color:cornsilk">the frequency of hurricanes </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
           </p>
 
         </div>
