--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <h4>List of some Cat 5 hurricanes in the US from 1900 to 2021</h4>
         
-        <img src="hurricaneeg1.jpeg" class="img-fluid" alt="Responsive image" style="width: 100%;">
+        <img src="hurricaneirma.jpg" class="img-fluid" alt="Responsive image" style="width: 100%;">
         <br>
 
   
