--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </h3>
           <p>Study from The Nature has also shown that
             <a href=" https://www.nature.com/articles/s41586-020-2867-7
-            " target="_blank" style="color:cornsilk">the endurhance of hurricane </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.</p>
+            " target="_blank" style="color:cornsilk">the endurance of hurricane </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.</p>
 
         </div>
       </div>
@@ -197,8 +197,7 @@
           <h3>Precipitation of hurricanes
         </h3>
         <p>Study from The GDFL(Global Warming and Hurricanes) has also shown that
-          <a href=" https://www.gfdl.noaa.gov/global-warming-and-hurricanes/" target="_blank" style="color:cornsilk">the amount of precipitation </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
-        </p>
+          <a href=" https://www.gfdl.noaa.gov/global-warming-and-hurricanes/" target="_blank" style="color:cornsilk">the amount of precipitation </a>has increased amist the rising wind intensity.       </p>
         </div>
       </div>
       <div class="carousel-item">
@@ -206,9 +205,9 @@
         <div class="carousel-caption ">
           <h3>frequency of hurricanes
           </h3>
-          <p>Study from The Nature has also shown that
+          <p>Study from PNAS has also shown that since the past 40 years,
             <a href=" https://www.pnas.org/content/117/22/11975" 
-            target="_blank" style="color:cornsilk">the frequency of hurricanes </a>has increased up to 20% from the 1960s, meaning an increase of longetivity and destruction to citizens of affected areas.
+            target="_blank" style="color:cornsilk">the frequency of hurricanes </a>has an annual increase of up to 49% in the North Atlantic, meaning an increase of chance of destruction to citizens of affected areas.
           </p>
 
         </div>
@@ -274,7 +273,7 @@
       <div class="col-md-3 mx-auto">
 
         <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Datasets</h5>
 
         <ul class="list-unstyled">
           <li>
@@ -300,7 +299,7 @@
       <div class="col-md-3 mx-auto">
 
         <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Article Links</h5>
 
         <ul class="list-unstyled">
           <li>
@@ -324,7 +323,7 @@
       <div class="col-md-3 mx-auto">
 
         <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"style="colour:black">Links</h5>
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"style="colour:black">Other Links</h5>
 
         <ul class="list-unstyled" >
           <li>
