--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
           </h3>
           <p>Study from PNAS has also shown that since the past 40 years,
             <a href=" https://www.pnas.org/content/117/22/11975" 
-            target="_blank" style="color:cornsilk">the frequency of hurricanes </a>has an annual increase of up to 49% in the North Atlantic, meaning an increase of chance of destruction to citizens of affected areas.
+            target="_blank" style="color:cornsilk">the frequency of hurricanes </a>has an annual increase of up to 49% in the North Atlantic, 
+            <a href=" //www.noaa.gov/media-release/record-breaking-atlantic-hurricane-season-draws-to-end" target="_blank" style="color:cornsilk">Year 2020 is also the year of the most Atlantic hurricanes</a> with up to 30 storms
           </p>
 
         </div>
