--- a/index.html
+++ b/index.html
@@ -347,10 +347,10 @@
             style="color:cornsilk" >worldvision.org</a>
           </li>
           <li>
-            <a href="#!"style="color:cornsilk">3Link 2</a>
+            <a href="//www.noaa.gov/media-release/record-breaking-atlantic-hurricane-season-draws-to-end"style="color:cornsilk">NOAA</a>
           </li>
           <li>
-            <a href="#!"style="color:cornsilk">3Link 3</a>
+            <a href="https://hurricane.com/hurricane-records/"style="color:cornsilk">Hurricane.com</a>
           </li>
           
         </ul>
