--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="carousel-caption ">
             <h3>Human activities: Human Deforestation
             </h3>
-            <p>cutting down of trees can relase up to 1/5 of CO2 gas to the atmosphere, contributing to global warming </p>
+            <p>Cutting down of trees can relase up to 1/5 of CO2 gas to the atmosphere, contributing to global warming </p>
           </div>
         </div>
          
