--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       
   <body >
     <!--introduction-->
-    <div class="jumbotron jumbotron-fluid" style="background-color: darkgrey;">
+    <div class="jumbotron jumbotron-fluid" style="background-color: rgb(243, 239, 239);">
       <div class="container">
         <h1 class="display-4" style="text-align: justify;">Climate Change</h1>
           <h2 class="display-4"  id ="introduction" >Introduction</h2> 
