--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="top-navbar" class="navbar navbar-expand-lg navbar-light" style="background-color:teal">
       <div class="container-fluid">
         <span class="navbar-brand" href="#">
-          <img src="climatechangepic1.jpeg" width="30" height="30" alt="">Beware of Climate Change</span>
+          <img src="climatechangepic1.jpeg" width="30px" height="30px" class="rounded float-start" alt="">  Beware of Climate Change</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
