--- a/index.html
+++ b/index.html
@@ -51,17 +51,21 @@
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <!--chart.js-->
-  <script src="path/to/chartjs/dist/chart.js"></script>
+  
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
   
 
   <!-- CSS  -->
   <link rel="stylesheet" href="climatestyle.css">
  
-  <canvas id="myChart" width="400" height="400"></canvas>
+  <canvas id="myChart1" width="400" height="400"></canvas>
   <script>
-    const ctx = document.getElementById('myChart');
-    const myChart = new Chart(ctx, {
+  
+
+const ctx = document.getElementById('myChart1');
+    const myChart1 = new Chart(ctx, {
         type: 'bar',
         data: {
             labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
@@ -95,6 +99,7 @@
             }
         }
     });
+  
   </script>
 
 </head>
