--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
   <!-- CSS  -->
   <link rel="stylesheet" href="climatestyle.css">
- 
+  
   <canvas id="myChart1" width="400" height="400"></canvas>
-  <script src="chartsnfigures .js">
+  <script src="chartsnfigures.js"></script>
   
 
   </script>
