--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
+  
+
+
   <nav id="top-navbar" class="navbar navbar-expand-lg navbar-light" style="background-color:teal">
     <div class="container-fluid">
       <span class="navbar-brand" href="#">
@@ -275,7 +278,9 @@
       <br>
       here's a sample chart. Please modify by inserting your data from the csv!!
 
-      <!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
+      <!--d3 js-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.1.1/d3.min.js" integrity="sha512-COTaPOlz12cG4fSfcBsxZsjauBAyldqp+8FQUM/dZHm+ts/jR4AFoJhCqxy8K10Jrf3pojfsbq7fAPTb1XaVkg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>"
+
   
       <canvas id="myChart1" width="400" height="400"></canvas>
 
