--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
      
   <!--example and datasets-->
   <div class="jumbotron jumbotron-fluid">
+  <div class="jumbotron jumbotron-fluid" style="background-color: rgb(243, 239, 239);">
     <div class="container">
       <h3 class="display-4" id ="examples">Examples and Datasets</h3>
 
