--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="container">
       <p1 class="lead">Here is a data From NOAA which displays the frequency of hurricanes in The Atlantic Ocean between 1850 and 2018</p1>
       <a class="btn btn-primary btn-lg" role="button" onclick="update('Frequency')">Frequency of Hurricanes of the Decade</a>
-      <a class="btn btn-primary btn-lg" role="button" onclick="update('FreqOverhundred')">Frequency of Hurricanes windspeeds over 100mph</a>
+      <a class="btn btn-primary btn-lg" role="button" onclick="update('FreqOverhundred')">Frequency of Hurricanes with windspeeds over 100mph</a>
       <a class="btn btn-primary btn-lg" role="button" onclick="update('percentage')">Percentage (over 100mph / total no. of Hurricanes) </a>
       
       
