--- a/index.html
+++ b/index.html
@@ -106,18 +106,21 @@
       <div class="carousel-inner">
         <div class="container">
           <h3  class="display-4"  id="causes" >Causes of climate Change</h3>
-                <br>
-                
-              </br>
+            <br>
+            <p1 class="lead">Causes can be categorised into Human activities and natural carbon emisstions give rise to greenhouse gases such as CO2, Chlorofluorocarbons, and Methane, concentrated in the atmosphere, 
+              which might lead to global warming. 
+            </p1>
+            <br> 
+            <br>
         </div>
          
         <div class="carousel-item active">
           <img class="d-block w-100" src="greenhouse-gas-emissions.jpg" alt="pollution and smoke" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
           <div class="carousel-caption">
             <h3 >Human activities:
-              Burning coal oil to generate electricity 
+              Burning Fossil Fuels (coal and oil) to generate electricity 
             </h3>
-            <p >Greenhouse gas such as CO2 and methane are produced from Fuel Combustion to the atmosphere</p>
+            <p >Since coal powerplants in the USA contribute to<a href="https://www.ucsusa.org/resources/coal-power-impacts" target="_blank" style="color:cornsilk">a 1/3 of elctricity </a>, the process of Fuel Combustion causes CO2 and Methane to became major sources of greenhouse gas to the atmosphere</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -178,10 +181,13 @@
 
    <div class="jumbotron jumbotron-fluid">
     <div class="container">
+      <br>
       <h3 class="display-4" id ="impacts">Evidence of climate Change: Tropical cyclones</h3>
-      <p1 class="lead"> Human activities and natural carbon emisstions give rise to greenhouse gases such as CO2, Chlorofluorocarbons, and Methane, concentrated in the atmosphere, which might lead to global warming.
-        As a result, rising temperature give rise to extreme weathers. One of which is the formation of tropical storms called Hurricanes or Typhoons.  
-     </p1>
+        <p1 class="lead"> Human activities and natural carbon emisstions give rise to greenhouse gases such as CO2, Chlorofluorocarbons, and Methane, concentrated in the atmosphere, which might lead to global warming.
+          As a result, rising temperature give rise to extreme weathers. One of which is the formation of tropical storms called Hurricanes or Typhoons.  
+        </p1>
+        <br> 
+        <br>
     </div>
   </div>
   <!--impact carousel-->
