--- a/index.html
+++ b/index.html
@@ -291,19 +291,20 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              So, does the graph show the increasing trend between number of hurricanes with time due to global warming?
+              So, does the graph show the increasing trend between the number of hurricanes with time due to global warming?
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <p>
                 <a href="https://link.springer.com/article/10.1007/s00382-013-1713-0" target="_blank" style="color:rgb(46, 45, 41)"> According to Climate dynamics(2013) </a> and <a href="https://link.springer.com/article/10.1007/s00382-013-1713-0" target="_blank" style="color:rgb(46, 45, 41)">Li (2020)</a>, an increasing trend between rise of ocean temperature and global warming has been observed. The data however, fails to show such trend. 
-                The first two graph shows the frequency of Hurricanes and over 100mph windspeed hurricanes in every 10 year period.
-                However these 2 graphs could not be representative of the trend as 
+                The first two graphs show the frequency of Hurricanes and over 100mph windspeed hurricanes in every 10 year period.
+                However these 2 graphs could not be representative of the trend due to variation of datapoints. In both cases, there is a general increasing trend  of hurricanes from the 1850s to 1950s, a strong decline in the 1960s and another increase from that year onwards. 
+                However, given the drastic increase of sea temperature with time didn't reflect the increasing trend of hurricanes, such a relationship could not be deduced.
                 <br>
                 <br>
-                The percentage of stronger hurricanes in all storms can more accuractely describe whether or not the relation of storms and global warming exists. 
-                There are fluctuations throughtout various decades and reaches a maximum of 30 hurricanes in 1940-49 period, however, plunges to new low in the 1960-69 season. 
+                The third graph shows the percentage of stronger hurricanes in all storms, which could more accuractely describe whether or not the relation of storms and global warming exists. 
+                There are still fluctuations throughtout various decades. The trend reaches a maximum of 38.5% of 100mph hurricanes in 1960-69 period, however, plunges to new low of 18.8% in the 1960-69 season. 
                 The trend rose slightly throughout the rest of the seasons but remains a steady average of 25 cyclones per decade in </p1>
                 1940-49 season remains the most frequent of the group with 10 hurricanes.
                 As a result, it is insignificant to call an increasing trend between frequency of tropical storms and time due to the rise in sea temperature. </p>
