--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
     <p>Figure 1.0</p>
     <div id="windspeed_chart"></div>
-    <script src="nfigures.js"></script>
+    <script src="chartsnfigures.js"></script>
 
   
     </div>
