--- a/index.html
+++ b/index.html
@@ -241,9 +241,22 @@
 
 
 
+
+
+
+
+
+
+    <div class="container">
+    <p>figure 1.0</p>
+    <div id="seatemp_chart"></div>
+    <script src="chartsnfigures.js"></script>
+
+
+
+
+    </div>  
       <!-- A graph session: frequency of hurricane from 1850 - 2018 -->
-   
-    
     <div class="container" >
       <p1 class="lead">Here is a data from <a href="https://www.aoml.noaa.gov/hrd/hurdat/UShurrs_detailed.html?print=yes">NOAA</a> which can be used to investigate the frequency of hurricanes in The Atlantic Ocean between 1850 and 2018</p1>
       <p class="lead">
@@ -261,7 +274,7 @@
       
   
 
-    <p>Figure 1.0</p>
+    <p>Figure 2.0</p>
     <div id="windspeed_chart"></div>
     <script src="chartsnfigures.js"></script>
 
