--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
     <p>figure 1.0</p>
     <div id="seatemp_chart"></div>
     <script src="chartsnfigures.js"></script>
+    <!--<script src="chartsnfigures.js"></script>-->
 
 
 
@@ -276,7 +277,7 @@
 
     <p>Figure 2.0</p>
     <div id="windspeed_chart"></div>
-    <script src="chartsnfigures.js"></script>
+    <!--<script src="chartsnfigures.js"></script>-->
 
   
     </div>
