--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h3 >Human activities:
             Burning Fossil Fuels (coal and oil) to generate electricity 
           </h3>
-          <p >Data shows coal powerplants in the USA contribute to<a href="https://www.ucsusa.org/resources/coal-power-impacts" target="_blank" style="color:cornsilk">a 1/3 of elctricity </a>, the process of Fuel Combustion causes CO2 and Methane to became major sources of greenhouse gas to the atmosphere</p>
+          <p >Data shows coal powerplants in the USA contribute to<a href="https://www.ucsusa.org/resources/coal-power-impacts" target="_blank" style="color:cornsilk"> a 1/3 of the total energy consumption</a>, the process of Fuel Combustion causes CO2 and Methane to became major sources of greenhouse gas to the atmosphere</p>
         </div>
       </div>
       <div class="carousel-item">
