--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne" >
             <div class="accordion-body">
               <p>
-              Power Discipation of Cycllones did show an positive correlation with Increasing Temperature over time. According to Figure 2, The  <a href="https://datahub.io/core/global-temp#resource-annual">10-year-average global temperature by</a> showed an increasing trend with time from 0.092C in 1880 to around 1.052C in 2018.
+              Power Discipation of Cycllones did show an positive correlation with Increasing Temperature over time. According to Figure 2, The  <a href="https://datahub.io/core/global-temp#resource-annual" style="color:rgb(46, 45, 41)">10-year-average global temperature </a> showed an increasing trend with time from 0.092C in 1880 to around 1.052C in 2018.
                This is supported by <a href="https://www.pnas.org/content/110/30/12219/tab-figures-data" style="color:rgb(46, 45, 41)">The prosceding of National Academy of Science (2013)</a>
 
               
@@ -323,7 +323,7 @@
                 However, given the drastic increase of sea temperature with time didn't reflect the increasing trend of hurricanes, such a relationship could not be deduced.
                 <br>
                 <br>
-                The final variable shows the <a href="#btnPercent"> percentage of stronger hurricanes in all storms</a>, which could more accuractely describe whether or not the relation of storms and global warming exists. 
+                The final variable shows the <a href="#btnPercent" style="color:rgb(46, 45, 41)"> percentage of stronger hurricanes in all storms</a>, which could more accuractely describe whether or not the relation of storms and global warming exists. 
                 There are still fluctuations throughtout various decades. The trend reaches a maximum of 38.5% of 100mph hurricanes in 1960-69 period, however, plunges to new low of 18.8% in the 1960-69 season. 
                 The trend rose slightly throughout the rest of the seasons but remains a steady average of 25 cyclones per decade in </p1>
                 1940-49 season remains the most frequent of the group with 10 hurricanes.
