--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </button>
   </div>
 
-  <!--impact of climate change-->  
+  <!--impact of climate change summary-->  
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <br>
@@ -252,7 +252,7 @@
       <p1 class="lead">Here is a data from <a href="https://www.aoml.noaa.gov/hrd/hurdat/UShurrs_detailed.html?print=yes">NOAA</a> which can be used to investigate the frequency of hurricanes in The Atlantic Ocean between 1850 and 2018</p1>
       <p class="lead">
       
-      
+      <!--buttons for variable switching-->
       <br>
       <a id="btnSeaTmp" class="btn btn-secondary btn-lg " role="button" aria-pressed="true" onclick="update('MeanSeaTemp')" style="margin-bottom: 1cm;">Mean Sea Temperature (base Temp set as year 1900) </a>
       <br>
@@ -284,7 +284,7 @@
     <!--script for the hurricane trend chart-->
     <script src="chartsnfigures.js"></script>
 
-
+    <!--findings regarding hurricane bar chart-->
       <div class="accordion " id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
