--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
       <div class="carousel-item">
        
-        <img class="d-block w-100" src="forestlungs.jpg" alt="Second slide">
+        <img class="d-block w-100" src="forestlungs.jpeg" alt="Second slide">
         <div class="carousel-caption">
           <div class="p-3 mb-2 bg-secondary text-white" style="--bs-bg-opacity: .5;">
             <h3>Human activities: Human deforestation
