--- a/index.html
+++ b/index.html
@@ -305,7 +305,13 @@
     <p>Figure 1.0</p>
     <div id="windspeed_chart"></div>
     <!--script for the hurricane trend chart-->
-    <script src="chartsnfigures.js"></script>
+    <script src="hurtrendbargraph.js"></script>
+
+
+    <div id="hurpie_chart"></div>
+    <!--script for colour schemes for piechart-->
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
 
     <!--findings regarding hurricane bar chart-->
       <div class="accordion " id="accordionPanelsStayOpenExample">
