--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 
 
     <div id="hurpie_chart"></div>
+    <script src="factspiehart.js"></script>
     <!--script for colour schemes for piechart-->
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
